Edits to (break in) presence/Steed discussion in background & questionnaire sections.

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -68,13 +68,13 @@ One of the overbearing concepts introduced by Milgram and Kishino is that whilst
 
 With a purely virtual environment, the entire viewport must necessarily be computer modelled in order to be rendered and as such there is complete quantitative information about and between all objects being presented. At the opposite end of the continuum with a completely real environment where none of the viewport is computer modelled there is no quantitative information associated with the content being displayed. At any point between the extremes the environment consists of a mixture of some modelled and some non-modelled content, the computer associating quantitative information to, and between, the virtual objects, but not necessarily to the real objects or between the virtual and real objects.
 
-Carrying the continuum concept further, Milgram and Kishino illustrate their understanding of augmented reality and also introduce two related new terms; augmented virtuality and mixed reality. In this fashion mixed reality is used to describe any environment that is not completely real or completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown how mixed reality encompasses both augmented reality and augmented virtuality.
+Carrying the continuum concept further, Milgram and Kishino illustrated their understanding of augmented reality and also introduced two related new terms; augmented virtuality and mixed reality. In this fashion mixed reality is used to describe any environment that is neither completely real nor completely virtual; that is, it encompasses all positions on the continuum between the extremes. Augmented reality is used to describe a real environment upon which virtual objects are overlain and augmented virtuality is used to describe a virtual environment upon which objects sampled from the real world (such as video feeds) are overlain. It is also shown how mixed reality encompasses both augmented reality and augmented virtuality.
 
 An obvious question raised from studying this figure is at what point toward the centre of the continuum an environment changes from being augmented reality into augmented virtuality or vice-versa. The answer to this question lies with consideration of what `background' environment is receiving the augmentations.
 
-If one were to take a viewport depicting a purely real environment and incrementally add more and more virtual objects, the environment's classification might intuitively seem to progress rightward along the continuum. Eventually, with the majority of the real environment obscured by virtual objects one might posit that the resultant environment should therefore have passed the centre point of the continuum and come to rest somewhere in its right half, gaining the classification of augmented virtuality. Likewise if one were to take a viewport depicting a purely virtual environment and incrementally introduce more sampled real objects to it, one might posit that it would eventually pass the centre point of the continuum and come to rest in the territory of augmented reality.
+If one were to take a viewport depicting a purely real environment and incrementally add more and more virtual objects, the environment's classification might intuitively seem to progress rightward along the continuum. Eventually, with the majority of the real environment obscured by virtual objects one might posit that the resultant environment should have passed the centre point of the continuum and come to rest somewhere in its right half, gaining the classification of augmented virtuality. Likewise if one were to take a viewport depicting a purely virtual environment and incrementally introduce more sampled real objects to it, one might posit that it would eventually pass the centre point of the continuum and come to rest in the territory of augmented reality.
 
-Anthony Steed's extension to Milgram and Kishino's reality-virtuality continuum concept clarifies the fallacy in this thinking by introducing the concept of the `primary environment':
+Anthony Steed's extension to Milgram and Kishino's reality-virtuality continuum concept clarifies the fallacy in this thinking by explicitly illustrating the concept of the `primary environment':
 
 \begin{quote}
 \textit{``While it is quite clear that the intention of plotting this axis was not to claim that it was actually a continuum between real and virtual, it is nevertheless clear that the main `environment' could be one of three things: a purely virtual environment, the local environment, or a remote real environment\footnote{Telepresence~\cite{Sheridan1992a}.}. One can think about what the background of the environment that the users see is...''}~\cite{Steed2014}
@@ -372,13 +372,13 @@ Of particular importance is to appreciate the distinction between a cross realit
 %	\textit{``\ldots\ virtual people, virtual objects and virtual settings can interact and thereby communicate with real people, real objects and real settings as though they were all part of the same world.''}~\cite{Terashima2001}
 %\end{quote}
 
-Although a cross reality system as a whole might be considered a case of mixed reality, whether each of its constituent environments should be considered outwith or within the realm of mixed reality (especially when visualised upon the continuum) is open to debate. Taking the real environment as an example, one could argue that the use of actuators to produce physically observable effects on behalf of controls from the virtual environment constitutes an augmented reality environment. However in adhering to the definition of augmented reality adopted in table \ref{adopted-alternate-reality-definitions} we would not label this an augmented reality environment as we do not have \textit{virtual} objects overlain upon our view of the real environment, but rather \textit{real} objects controlled by the actions and events of actors within a discrete virtual environment. So whilst an augmented reality environment falls within the realms of mixed reality, the constituent environments of a cross reality system when considered individually are considered here as occupying the two extremes of the continuum, outwith the mixed reality region and thus their depiction as such in figures \ref{virtuality-continuum-cross-reality-1} to \ref{virtuality-continuum-cross-reality-information-flows-dashed.png}. It is beyond the scope of this chapter to discuss the ontological implications of the `reality' of virtual objects and actions, so the interested reader is referred to Brey~\cite{Brey2014} for further discussion of this subject.
+Although a cross reality system as a whole might be considered a case of mixed reality, whether each of its constituent environments should be considered outwith or within the realm of mixed reality (especially when visualised upon the continuum) is open to debate. Taking the real environment as an example, one could argue that the use of actuators to produce physically observable effects on behalf of controls from the virtual environment constitutes an augmented reality environment. However in adherence with the definition of augmented reality adopted in table \ref{adopted-alternate-reality-definitions} we would not label this an augmented reality environment as we do not have \textit{virtual} objects overlain upon our view of the real environment, but rather \textit{real} physical objects controlled by the actions and events of actors within a discrete virtual environment. So whilst an augmented reality environment falls within the realms of mixed reality, the constituent environments of a cross reality system when considered individually are considered here as occupying the two extremes of the continuum, outwith the mixed reality region and thus their depiction as such in figures \ref{virtuality-continuum-cross-reality-1} to \ref{virtuality-continuum-cross-reality-information-flows-dashed.png}. It is beyond the scope of this chapter to discuss the ontological implications of the `reality' of virtual objects and actions, so the interested reader is referred to Brey~\cite{Brey2014} for further discussion of this subject.
 
 %***this is more to do distribution of the dashed line surrounding the environments, rather than the position of the environments themselves (solid line)***
 
 %However, XR systems that allow simultaneous interaction with both of their constituent environments blur this definition; using a XR platform such as that discussed in this document, a user can transition between perceiving stimuli from each of these environments (figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3}) in a manner that allows them to engage with each environment without becoming wholly vacant from the other.
 
-A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept. For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
+A further distinction between augmented reality and cross reality is made by consideration of Steed's primary environment concept. For an augmented reality system the primary environment is necessarily real, as augmented reality describes systems in which virtual objects are superimposed upon a view (a background) of a real environment. However for a cross reality system one could argue that the primary environment is either real or virtual, depending upon how the user interacts with the system. For the user that walks through the real environment of a cross reality system and views their unmediated surroundings (including physical actuations triggered by events within the virtual environment), one would intuitively posit that their primary environment is real. But for the user that sits in front of a computer monitor and uses an avatar to walk through the virtual environment of the same cross reality system and hence views the avatar's virtual surroundings (including visualisations of sensor data collected from the real environment), one would posit that their primary environment is virtual. Considering figures \ref{virtuality-continuum-cross-reality-2} and \ref{virtuality-continuum-cross-reality-3} again, one could say that the dashed ellipses thus represent the primary environment for a cross reality system in each of these scenarios respectively.
 
 %=========================================================================================================
 
@@ -556,19 +556,25 @@ The novel aspect of parallel reality is the ability it imparts upon its user to 
 
 %This is achieved by the user performing transitions between RW visual stimuli and VR visual stimuli, both presented via their HMD. This extends existing XR research by allowing the user to engage with the visual stimuli of the VR component of a XR system from any position and at any time.
 
-Whilst some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment and the other~\cite{Slater2002}, which would result in a substantial increase in cognitive load upon each transition of a parallel reality system, the position adopted by this thesis is of the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former, that both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} and that when engaging with virtual content a user's focus can even be said to typically be \textit{shared} between the real and the virtual environments~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
+Some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment and the other~\cite{Slater2002}. Considering a parallel reality system, this notion would expect a substantial increase in cognitive load upon each transition between real and virtual environments. However the position adopted by this thesis is of the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former. Instead, both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} and when engaging with virtual content a user's focus can even be said to typically be \textit{shared} between the real and the virtual environments~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
 
 This latter position is particularly apt for situations wherein the real and virtual environments share the same fundamental layout and dimensions (spatial equivalence), as those of the parallel reality systems explored within this thesis do, as inherent familiarity between two environments intuitively reduces the cognitive load associated with transitioning between them.
 
-Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between real and virtual to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011}. The advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. The term polysocial reality was introduced to describe situations like this, of multiplexing physical reality with Web-based social networks and apps for Internet mediated social interaction~\cite{Applin2012}, and as it has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001} the importance of social interaction upon presence should not be understated.
+Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the increased cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between real and virtual to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} and accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011}. The advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} and to play multiple roles~\cite{Terashima2001}. The term polysocial reality was introduced to describe situations like this, of multiplexing physical reality with Web-based social networks and apps for Internet mediated social interaction~\cite{Applin2012}. As it has been shown that \textit{``effective interaction among participants is a contributing factor to presence''}~\cite{Terashima2001}, the importance of social interaction upon presence should not be understated.
 
 %HyperReality p148
 
-However no matter how smooth the transition, the process is expected to nonetheless result in some heightened cognitive load, a temporary break in presence (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is the second from Waterworth and Waterworth~\cite{Waterworth2001}: a movement along the focus axis away from presence in the real or a virtual environment and toward absence. This differs to Slater and Steed's original definition~\cite{Slater2000} where they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth and Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This usage better fits the situations invoked by the parallel reality concept, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.
+However no matter how smooth the transition between real and virtual, the process is expected to nonetheless result in some heightened cognitive load, a temporary `break in presence' (BIP), as the user comes to terms with the new environment presented to them and comprehends its relation to the other environment that they were just perceiving. The definition of break in presence adopted herein is that introduced by Waterworth and Waterworth for the purposes of their three dimensions of virtual experience model~\cite{Waterworth2001}. Here, a break in presence represents a movement along the focus of attention axis away from presence in either a real, a virtual, or a mixed reality environment and toward absence. This differs to Slater and Steed's earlier usage of the term~\cite{Slater2000} wherein they considered presence in terms of `virtual presence', where a break in presence is a Gestalt switch from a sense of presence in a virtual environment to a sense of presence in the real environment.
 
-This difference between the Steed and Waterworth definitions of break in presence can be visualised by considering the axes of the combined Milgram/Waterworth model. In the Steed definition a break in presence represents a movement upon the locus of attention axis from the virtual world to the real world. In the second of the Waterworth definitions a break in presence represents a movement upon the focus of attention axis from presence to absence, regardless of position upon the locus of attention axis.
+\begin{quote}
+	\textit{``When in a virtual environment, presence is typically shared between the VR and the physical world. `Breaks in presence' are actually shifts of presence away from the VR and toward the external environment. But we can also have `breaks in presence' when attention moves toward absence - when an observer is not attending to stimuli present in the virtual environment, nor to stimuli present in the surrounding physical environment''}~\cite{Waterworth2001}
+\end{quote}
 
-Transitions can be implemented in multiple different manners and it is expected that users will prefer different implementations in different situations, surroundings and scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe break in presence being experienced upon its execution). To this end, this thesis explores several different transition implementations in order to identify and quantify preferences toward them, to infer which approaches to transitioning between real and virtual visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (moving, stationary, etc.).
+The Waterworth model considers presence in terms of attending to stimuli from either a real environment, a virtual environment, a mixed reality environment, or even multiple environments, with a break in presence representing absence in the sense of heightened conceptual load and the resultant reduced perceptual processing of environmental stimuli, no matter the provenance of those stimuli. This usage better fits the situations invoked by the parallel reality concept, which is concerned with intentionally and willingly switching engagement between stimuli from both real and virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.
+
+This difference between the Steed and Waterworth uses of break in presence can be visualised by considering the axes of the combined Milgram/Waterworth model. In the Steed definition a break in presence represents a movement upon the locus of attention axis from the virtual world to the real world. In the Waterworth definition a break in presence represents a movement upon the focus of attention axis from presence to absence, regardless of position upon the locus of attention axis.
+
+Transitions between the virtual world and the real world can be implemented in multiple different manners and it is expected that users may prefer different implementations in different situations, surroundings and scenarios. Preference toward a particular implementation is posited to correlate with a less severe break in presence being experienced upon its execution. This thesis explores several different transition implementations, both in order to identify and quantify preferences toward them in general, and to infer any relationships between transition preference and particular situational states.
 
 %=========================================================================================================
 
