--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -216,7 +216,7 @@ Although the initial integration test with a single PS3 Eye camera revealed easy
 	\end{center}
 \end{figure}
 
-An oversight in the design of the camera mounts was realised when William Steptoe subsequently released details of his `AR Rift' project\footnote{\url{http://willsteptoe.com/post/66968953089/ar-rift-part-1}}. Although the DK1's overall screen has a resolution of 1280x800 in a landscape 16:10 aspect ratio, each half of this screen as presented individually to each eye has a resolution of 640x800 in a portrait 4:5 aspect ratio. Thus to best match the aspect ratio of a 4:3 camera sensor such as that of the PS3 Eye to each half of the DK1's screen, that camera should be oriented in a portrait orientation rather than the landscape orientation that had been employed thus far by the Mirrorshades platform with the PS3 Eye cameras. New mounting hardware was designed and printed by further modification of the USC's original 3D designs for vertical mounting of the PS3 Eye cameras. This new design is shown in figure \ref{clips-vert.jpg} (the recessed section in the centre of the clip allows for the heads of bolts to clear the front of the DK1) and the assembled units are shown attached to the DK1 in figure \ref{vert-6.jpg}. The files for printing both versions of the camera mounts are available online\footnote{\url{https://github.com/CJ-Davies/Oculus-Rift-DK1-camera-mounts}}. Additionally the metal stand-offs that had been used to mount the camera PCBs to the clips (see figure \ref{vert-1.jpg}) were replaced with a combination of rubber washers and threaded bolts (see figure \ref{vert-4.jpg}) both to reduce the discrepancy in the mediated RW images caused by the distance between the camera sensors and the user's eyes (by reducing this distance) and to allow for finer alteration of the orientation of the cameras.
+An oversight in the design of the camera mounts was realised when William Steptoe subsequently released details of his `AR Rift' project~\cite{Steptoe2014}. Although the DK1's overall screen has a resolution of 1280x800 in a landscape 16:10 aspect ratio, each half of this screen as presented individually to each eye has a resolution of 640x800 in a portrait 4:5 aspect ratio. Thus to best match the aspect ratio of a 4:3 camera sensor such as that of the PS3 Eye to each half of the DK1's screen, that camera should be oriented in a portrait orientation rather than the landscape orientation that had been employed thus far by the Mirrorshades platform with the PS3 Eye cameras. New mounting hardware was designed and printed by further modification of the USC's original 3D designs for vertical mounting of the PS3 Eye cameras. This new design is shown in figure \ref{clips-vert.jpg} (the recessed section in the centre of the clip allows for the heads of bolts to clear the front of the DK1) and the assembled units are shown attached to the DK1 in figure \ref{vert-6.jpg}. The files for printing both versions of the camera mounts are available online\footnote{\url{https://github.com/CJ-Davies/Oculus-Rift-DK1-camera-mounts}}. Additionally the metal stand-offs that had been used to mount the camera PCBs to the clips (see figure \ref{vert-1.jpg}) were replaced with a combination of rubber washers and threaded bolts (see figure \ref{vert-4.jpg}) both to reduce the discrepancy in the mediated RW images caused by the distance between the camera sensors and the user's eyes (by reducing this distance) and to allow for finer alteration of the orientation of the cameras.
 
 \TwoFig{rift-clips-cameras/clips-vert.jpg}{Updated camera mount.}{clips-vert.jpg}
        {rift-clips-cameras/vert-6.jpg}{PS3 Eye cameras using updated mounts.}{vert-6.jpg}
