--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -559,7 +559,9 @@ Under these categories one can consider the log data recorded by the Mirrorshade
 
 \subsection{Presence Questionnaires}
 \label{presence-questionnaires}
-Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}, where a break in presence can result from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
+Due to the nature of the Mirrorshades platform and the adoption of the Waterworth model of the break in presence concept, most established presence questionnaires could not be directly applied. These presence questionnaires have predominantly been written for application to `full immersion' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment, adopting the Slater and Steed model of the break in (virtual) presence concept, upholding the notion of \textit{``VR as portal to a private world of simulation where physical senses are immersed by prosthetics, where users temporarily `forget' their primary sensory world''}~\cite{Heim2014}.
+
+Illustrated in reference to an embodied cognition framework, the sense of presence in these full immersion VR scenarios is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as being possible in the VR environment and suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. A break in presence can result here from a mismatch between the predicted state of a virtual object using a motor representation and the actual state of the object after enacting that motor representation~\cite{Giuseppe2014}.
 
 However considering a parallel reality scenario within the same framework, sensory input from a RW environment that features high spatial equivalence and a mutual vantage point with the VR environment is not incompatible, but instead complimentary and we do not wish for the user to `forget' about either `sensory world'. Whereas a full immersion VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, likely incompatible with and requiring suppression of the model of their RW surroundings, parallel reality systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to the RW model and can be attended to in tandem. The effect of this complimentary nature of the environments can be considered within the context of Waterworth and Waterworth's `three layers of presence'~\cite{Mantovani2010, Giuseppe2014} that constitute:
 
@@ -581,25 +583,25 @@ Each of these three levels is associated with one of Damasio's evolutionary leve
 
 While RW experiences rarely feature conflict between the proto-presence and core presence layers, VR experiences often present such conflict due to mismatch between physical actions and perceived (virtual) results owing to the conflicting content of the two environments. A parallel reality system whose two constituent environments share high spatial equivalence however, should not present such a mismatch between proto- and core presence layers.
 
-The implication this has upon the suitability of established presence questionnaires is perhaps best illustrated by appreciation of the lack of consensus when it comes to the definition of the term `presence'~\cite{Calleja2014}, with many questionnaire authors using the term to mean only \textit{mediated} presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}. Visualised using the combined Milgram/Waterworth model, established presence questionnaires in this vein largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence is here considered under the original Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}) as a shift upon the locus of attention axis from VR to RW.
+The implication this has upon the suitability of established presence questionnaires to parallel reality platforms is perhaps best illustrated by appreciation of the lack of consensus when it comes to the definition of the term `presence'~\cite{Calleja2014} (and thus `break in presence'), with many questionnaire authors using the term to mean only \textit{mediated} presence~\cite{Mantovani2010} and \textit{``to refer to experiencing a purely VR as if it were a real place''}~\cite{Steed2014}. Visualised using the combined Milgram/Waterworth model, established presence questionnaires in this vein largely assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis and `no sense of presence' means a position toward the RW extreme of the axis. A break in presence is here considered under the Slater and Steed definition (see discussion in section \ref{transitions_in_parallel_reality}) as a shift upon the locus of attention axis from VR to RW.
 
-In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim was to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the second of Waterworth and Waterworth's definitions, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studied the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
+In this stage of the evaluation into the Mirrorshades parallel reality platform however, the aim was to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence considered under the Waterworth definition, as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation studied the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
 
-Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needed to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment were thus unsuitable for use in assessment of a parallel reality scenario. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
+Instead of issuing a questionnaire designed to determine the balance between virtual presence and real presence, this investigation instead needed to employ a questionnaire that provides insight into the balance between presence (whether real or virtual) and absence. Many established presence questionnaires that feature wording and weighting of questions associating negativity to awareness of the stimuli from the RW environment were thus unsuitable. Whilst this approach is ideal for a full immersion VR scenario in which awareness of the VR environment at the complete exclusion of the RW environment is the ultimate goal, it does not apply well to a parallel reality scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to freely transition between both RW and VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is beneficial, rather than detrimental, to the overall experience.
 
-Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that used in an experiment by Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment with a neutral questioning tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising incompatibility and separateness.
+Witmer and Singer's presence questionnaire~\cite{Witmer1998} for example, poses several questions that directly enquire about aspects of the virtual environment (\textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR and RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism and of how well bodily actions were represented as possible in the VR environment). Other questionnaires such as that from Slater and Steed, in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment with a neutral questioning tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this permeates an `either or' implication to the two environments, emphasising their incompatibility and separateness.
 
 %=========================================================================================================
 
 \subsection{The Igroup Presence Questionnaire}
 \label{igroup-presence-questionnaire-explanation}
-The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
+The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) and realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment and REAL questions assess the perceived `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of sensory input from the RW environment. INV questions are worded in a manner that does not associate attention paid to this RW sensory input as inherently negative, or even such that these stimuli are considered incompatible, reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged, such as an application of parallel reality.
 
 For a well implemented full immersion VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} and \textit{``felt present''}) and INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} and \textit{``fully agree''}) would even seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence in the VR environment by hampering the sense that bodily actions are possible there.
 
 However in a parallel reality scenario that features high spatial equivalence between its constituent RW and VR environments, this tie between SP and INV may not demonstrate. Due to the spatial equivalence between the two environments and the fact that the user's view of the virtual is of the equivalent vantage, bodily actions in the VR environment are inherently compatible with those in the RW environment - they could even be said to mimic or imitate them. Thus SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. It may even be the case that an inverse relationship presents between SP3 and INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as RW bodily actions are shared (`possible') with the VR environment.
 
-A conservative expectation for the results of the IPQ when applied to a parallel reality scenario would be for generally lower INV scores than a full immersion VR scenario but without drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality scenario would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
+A conservative expectation for the results of the IPQ when applied to a parallel reality scenario would be for generally lower INV scores than for a full immersion VR scenario but without drastic reduction in SP scores. An optimistic expectation for a well implemented parallel reality scenario would be for lower INV scores and \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment lead to an increase in experienced spatial presence in the VR environment.
 
 Although a traditional view of augmented reality is that it aims to enhance the sense of presence in the physical world~\cite{Waterworth2014}, this does not necessarily stand as an aim of parallel reality. This is due to the fact that instead of augmenting the primary environment of the user's RW surroundings, parallel reality instead presents the user with two separate (debatably both or alternatingly `primary') environments.
 
