--- a/bib.bib
+++ b/bib.bib
@@ -3354,9 +3354,6 @@ volume = {2},
 year = {2009}
 }
 @article{Salmasi2009,
-annote = {Not really related to cross reality/standards, but has an interesting history of what led to gambling/banking being banned in Seond Life - issues with different laws/jurisdictions depending upon the country of the user/server, what happens if they make the account in one country \& then move to another, what if they use a proxy, etc., etc., etc.
-        
-Standards for the exchange of media/control information between virtual worlds \& between virtual worlds \& the real world may have to (may already have) take account of these sort of things - the standards can't allow users to do something that is illegal in one country without sufficient measures to prevent it in this country, whatever.},
 author = {Salmasi, Anna and Gillam, Lee},
 journal = {Journal of Virtual Worlds Research},
 number = {3},
@@ -3650,6 +3647,15 @@ editor = {Grimshaw, M},
 pages = {420--443},
 publisher = {Oxford University Press},
 title = {{Recreating Visual Reality in Virtuality}},
+year = {2014}
+}
+@inproceedings{Steptoe2014,
+author = {Steptoe, William and Julier, Simon and Steed, Anthony},
+booktitle = {2014 IEEE International Symposium on Mixed and Augmented Reality (ISMAR)},
+file = {:home/cj/steptoe.pdf:pdf},
+isbn = {9781479961849},
+pages = {213--218},
+title = {{Presence and Discernability in Conventional and Non-Photorealistic Immersive Augmented Reality}},
 year = {2014}
 }
 @inproceedings{Steptoe2010,
